# ip-rich-poc-phase2

./: .env.example  .gitignore  .gitmodules  .mise.toml  .prettierignore  AGENTS.md  CLAUDE.md  MISE.md  PATENT_REVIEW.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: analysis.yml  cron-patent-search.yml  deploy.yml  format-check.yml
alembic/: env.py
api/: index.py
app/: __init__.py  cli.py
app/api/: deps.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  models.py  session.py
app/ingest/: raw_storage.py
app/jp_index/: __init__.py  search.py
app/llm/: deep_research.py  providers.py
app/parse/: __init__.py  jp_gazette_parser.py
app/search/: __init__.py  providers.py
app/services/: analysis_service.py  audit_service.py  case_service.py  company_ingest.py  ingestion_service.py  linking_service.py  normalization.py  (+2 more)
docs/: architecture-overview.md  basic-design.md  case-management.md  data-model.md  gbizinfo.md  match-scoring.md  phase2-master-data-ops.md  phase2-master-data.md  requirements.md
docs-site/: .mise.toml  .prettierignore  .prettierrc.json  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  vercel.json
infra/: .mise.toml
sample/: 侵害調査プロンプト.txt  特許DD管理シート - Aランク特許.csv
scripts/: jp_index_normalize_template.py  migrate_phase1_data.py
supabase/: config.toml
tests/: __init__.py  conftest.py  test_api.py  test_jp_index_api.py
tools/: notion_migrate_docs.py  notion_migrate_docs_report.json
(+293 files in other folders)
