[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phase2-patent-storage"
version = "0.1.0"
description = "Patent data storage system with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.15.0",
    "httpx>=0.27.0",
    "lxml>=5.3.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-lxml>=2024.11.0",
    "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
phase2 = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
